Finishing touches on the Nynth tool
